--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <section id="mainContainer">
   <div class="secondaryContainer">
-    <img src="/images/image-qr-code.png" alt="" srcset="">
+    <img src="/images/image-qr-code.png" alt="qr code" srcset="">
     <div class="textContainer">
     <h1>Improve your front-end skills by building projects</h1>
 
